image name change

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
  </nav>
 
  <main>
-    <section class="illus1" id="secone"><img src="/images/krishna1.png" alt="" class="style"></section>
+    <section class="illus1" id="secone"><img src="images/krishna.png" alt="" class="style"></section>
     <section class="illus1" id="secthree"><img src="images/saleposter.png" class="style" alt=""></section>
     <section class="illus1" id="sectwo"><img src="images/pnjb.png" alt="" class="style"></section>
  </main>
